# Call-of-Dragons-OCR

./: .env.example  .gitignore  README.md  constants.py  main.py  pyproject.toml
emulator/: adb_integration.py
exporters/: __init__.py  base.py  csv_file.py  google_sheets.py
logic/: logic.py
readers/: screen.py
